--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ button[type="submit"] {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 50px;
+  gap: 7rem;
 
 }
 
